--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       href="http://10.2.171.110:8036/logo.ico"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>APHMES - TPM</title>
+    <title>APHMES - Kanban</title>
   </head>
   <body>
     <div id="app"></div>
